fixed images paths
images were not showing becuase of wrong paths so fixed that

--- a/mobile.css
+++ b/mobile.css
@@ -1,135 +1,135 @@
 /* Menu */
-#navigation .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+#navigation .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
-#navigation .menu ul li:last-child{
-    display: none;
+#navigation .menu ul li:last-child {
+  display: none;
 }
 /* Hero */
-#showcase .showcase-content{
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 0;
+#showcase .showcase-content {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0;
 }
-#showcase .showcase-title{
-    grid-row: 2/ span 2;
-    text-align: c;
+#showcase .showcase-title {
+  grid-row: 2 / span 2;
+  text-align: c;
 }
-.showcase-img{
-    background-image: url(img/Path5.png);
-    background-size: 70%;
-    background-position: center;
-    background-repeat: no-repeat;
-    text-align: center;
+.showcase-img {
+  background-image: url(./img/Path5.png);
+  background-size: 70%;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
 }
-.showcase-img img{
-    width: 60%;
+.showcase-img img {
+  width: 60%;
 }
 /* Hero 2*/
-#card-1 .img-with-text{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(1, minmax(50%, auto));
-    gap: 0;
+#card-1 .img-with-text {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(1, minmax(50%, auto));
+  gap: 0;
 }
-#card-1 .card-text{
-    padding: 0rem 2rem;
+#card-1 .card-text {
+  padding: 0rem 2rem;
 }
-#card-1 .card-img{
-    background: url(img/Sofa.png) no-repeat 60% 60%/ 60%,
-    url(img/path1-rotated.png) center/ 80% no-repeat;
+#card-1 .card-img {
+  background: url(./img/Sofa.png) no-repeat 60% 60%/ 60%,
+    url(./img/path1-rotated.png) center/ 80% no-repeat;
 }
 /* Hero 3 */
-#light-card-1 .img-with-text-light{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, minmax(50%, auto));
-    gap: 0;
-    padding: 1rem 0;
+#light-card-1 .img-with-text-light {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, minmax(50%, auto));
+  gap: 0;
+  padding: 1rem 0;
 }
-.light-text{
-    padding: 0rem 2rem;
+.light-text {
+  padding: 0rem 2rem;
 }
-.light-card{
-    grid-row: 1/ span 1;
+.light-card {
+  grid-row: 1 / span 1;
 }
-#light-card-1 .light-card{
-    background: url(img/armchair2.png) no-repeat 20% 70%/ 65%,
-    url(img/Path2.png) center/ 80% no-repeat;
+#light-card-1 .light-card {
+  background: url(./img/armchair2.png) no-repeat 20% 70%/ 65%,
+    url(./img/Path2.png) center/ 80% no-repeat;
 }
 /* Hero 4 */
-#card-2 .img-with-text-2{
-    display: grid;
-    height: 100%;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, minmax(50%, auto));
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    gap: 0rem;
+#card-2 .img-with-text-2 {
+  display: grid;
+  height: 100%;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, minmax(50%, auto));
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 0rem;
 }
-#card-2 .card-text-2{
-    padding: 0rem 2rem;
+#card-2 .card-text-2 {
+  padding: 0rem 2rem;
 }
 /* NewsLetter */
-#newsletter{
-    background-color: #F0F0F0;
-    height: 50vh;
-    width: 100vw;
+#newsletter {
+  background-color: #f0f0f0;
+  height: 50vh;
+  width: 100vw;
 }
-#newsletter .container{
-    height: 100%;
+#newsletter .container {
+  height: 100%;
 }
-#newsletter .newsletter-content{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+#newsletter .newsletter-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
-#newsletter .newsletter-content > div{
-    width: 100%;
-    padding: 0rem 1rem;
+#newsletter .newsletter-content > div {
+  width: 100%;
+  padding: 0rem 1rem;
 }
-#newsletter .newsletter-content > *:nth-child(2){
-    width: 100%;
-    padding: 1rem 1rem;
+#newsletter .newsletter-content > *:nth-child(2) {
+  width: 100%;
+  padding: 1rem 1rem;
 }
-#newsletter .newsletter-content > *:nth-child(3){
-    width: 100%;
+#newsletter .newsletter-content > *:nth-child(3) {
+  width: 100%;
 }
-.newsletter-content button.btn{
-    display: block;
-    width: 100%;
+.newsletter-content button.btn {
+  display: block;
+  width: 100%;
 }
-.n-margin{
-    margin: 0rem;
+.n-margin {
+  margin: 0rem;
 }
 /* Footer */
-.footer-container{
-    display: grid;
-    height: 100%;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem;
-    padding: 0 2rem;
+.footer-container {
+  display: grid;
+  height: 100%;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
+  padding: 0 2rem;
 }
-.grid-span img{
-    width: 60%;
+.grid-span img {
+  width: 60%;
 }
-.bottom-bar{
-    background-color: var(--primary-color);
-    font-weight: 100;
+.bottom-bar {
+  background-color: var(--primary-color);
+  font-weight: 100;
 }
-@media screen and (max-width:375px){
-    html{
-        font-size: 14px;
-    }
+@media screen and (max-width: 375px) {
+  html {
+    font-size: 14px;
+  }
 }
-@media screen and (max-width:320px){
-    html{
-        font-size: 12px;
-    }
+@media screen and (max-width: 320px) {
+  html {
+    font-size: 12px;
+  }
 }
